Stop squashing on small vp

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ input[type="reset"] {
   display: grid;
   height: 100%;
   grid-template-rows: min-content 1fr;
-  grid-template-columns: minmax(min-content, 1fr) 4fr;
+  grid-template-columns: minmax(min-content, 1fr) minmax(520px, 4fr);
 }
 
 .icon {
